--- a/.github/workflows/WRT-CORE.yml
+++ b/.github/workflows/WRT-CORE.yml
@@ -76,7 +76,8 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           docker rmi $(docker images -q)
-          sudo bash -c 'bash <(curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh)'
+          curl -s https://build-scripts.immortalwrt.eu.org/init_build_environment.sh
+          sudo bash  init_build_environment.sh
 
       - name: Initialization Values
         run: |
