--- a/.github/workflows/WRT-CORE.yml
+++ b/.github/workflows/WRT-CORE.yml
@@ -111,7 +111,7 @@ jobs:
       - name: Check Patches
         run: |
           if [ -f "$GITHUB_WORKSPACE/Patches/Patches.sh" ]; then
-            sudo $GITHUB_WORKSPACE/Patches/Patches.sh
+            sudo bash $GITHUB_WORKSPACE/Patches/Patches.sh
           else
             echo "No patches need to be installed!"
           fi
