--- a/.github/workflows/CWRT-ALL.yml
+++ b/.github/workflows/CWRT-ALL.yml
@@ -51,13 +51,13 @@ jobs:
       #默认主题
       WRT_THEME: ${{matrix.THEME}}
       #默认主机名
-      WRT_NAME: CWRT
+      WRT_NAME: ZH_WRT
       #默认WIFI名
-      WRT_WIFI: CWRT
+      WRT_WIFI: ZH_WRT
       #默认密码，仅作提示，修改无用
       WRT_PW: 无
       #默认地址
-      WRT_IP: 192.168.10.1
+      WRT_IP: 192.168.6.1
       #默认源码
       WRT_URL: https://github.com/${{matrix.SOURCE}}.git
       #默认分支
